--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <title>Repo-Test</title>
+</head>
+<body>
+Test
+</body>
+</html>
